force-app/main/default/objects/Account/fields/Accompagnant1__c.field-meta.xml
<CustomField>
    <fullName>Accompagnant1__c</fullName>
    <label>Accompagnant 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>