force-app/main/default/objects/Account/fields/Accompagnant2__c.field-meta.xml
<CustomField>
    <fullName>Accompagnant2__c</fullName>
    <label>Accompagnant 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>