force-app/main/default/objects/Account/fields/AdressePostale__c.field-meta.xml
<CustomField>
    <fullName>AdressePostale__c</fullName>
    <description>Champ qui concatène l&#39;adresse postale pour l&#39;afficher dans le bandeau</description>
    <formula>NoVoie__c + &quot; &quot;+ TEXT(TypeVoie__c) + &quot; &quot;+  NomVoie__c + BR() +  Ville__r.Name  + &quot; &quot; + CodePostal__c + BR()+  TEXT(Pays__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Postale</label>
    <type>Text</type>
</CustomField>