force-app/main/default/objects/Account/fields/AglAuMoins1Interac12Mois__c.field-meta.xml
<CustomField>
    <fullName>AglAuMoins1Interac12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interaction ou transaction sur les 12 DM</label>
    <type>Checkbox</type>
</CustomField>