force-app/main/default/objects/Account/fields/AglAuMoins1Interac3Mois__c.field-meta.xml
<CustomField>
    <fullName>AglAuMoins1Interac3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interaction ou transaction sur les 3 DM</label>
    <type>Checkbox</type>
</CustomField>