force-app/main/default/objects/Account/fields/AglDateDernInteraction__c.field-meta.xml
<CustomField>
    <fullName>AglDateDernInteraction__c</fullName>
    <label>Date de la dernière interac/transac</label>
    <type>DateTime</type>
</CustomField>