force-app/main/default/objects/Account/fields/AglDepense12DerniersMois__c.field-meta.xml
<CustomField>
    <fullName>AglDepense12DerniersMois__c</fullName>
    <label>Montant dép lors sur les 12 DM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>