force-app/main/default/objects/Account/fields/AglDepenseDerniereVisite__c.field-meta.xml
<CustomField>
    <fullName>AglDepenseDerniereVisite__c</fullName>
    <label>Montant dép lors de la dernière visite</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>