force-app/main/default/objects/Account/fields/AglNbrCinemas12Mois__c.field-meta.xml
<CustomField>
    <fullName>AglNbrCinemas12Mois__c</fullName>
    <label>Nombre de cinémas fréquentés sur 12 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>