force-app/main/default/objects/Account/fields/AglNbrCinemas1Mois__c.field-meta.xml
<CustomField>
    <fullName>AglNbrCinemas1Mois__c</fullName>
    <label>Nombre de cinémas fréquentés sur 1 mois</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>