force-app/main/default/objects/Account/fields/AglNbrCinemas3Mois__c.field-meta.xml
<CustomField>
    <fullName>AglNbrCinemas3Mois__c</fullName>
    <label>Nombre de cinémas fréquentés sur 3 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>