force-app/main/default/objects/Account/fields/AglNbrMoyenVisite6Mois__c.field-meta.xml
<CustomField>
    <fullName>AglNbrMoyenVisite6Mois__c</fullName>
    <label>Nbr moy visites ciné mensu sur les 6 DM</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>