force-app/main/default/objects/Account/fields/AglNbrVisitesCimema12Mois__c.field-meta.xml
<CustomField>
    <fullName>AglNbrVisitesCimema12Mois__c</fullName>
    <label>Nbr de visites cinéma sur les 12 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>