force-app/main/default/objects/Account/fields/AglNbrVisitesCimema30jours__c.field-meta.xml
<CustomField>
    <fullName>AglNbrVisitesCimema30jours__c</fullName>
    <label>Nbr de visites cinéma sur les 30 DM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>