force-app/main/default/objects/Account/fields/AglSansInterac12Mois__c.field-meta.xml
<CustomField>
    <fullName>AglSansInterac12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans interac/transac sur les 12 DM</label>
    <type>Checkbox</type>
</CustomField>