force-app/main/default/objects/Account/fields/AglSansInterac36Mois__c.field-meta.xml
<CustomField>
    <fullName>AglSansInterac36Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans inter/trans sur les 36 DM</label>
    <type>Checkbox</type>
</CustomField>