force-app/main/default/objects/Account/fields/AglVisiteurCinema12Mois__c.field-meta.xml
<CustomField>
    <fullName>AglVisiteurCinema12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visiteur cinéma sur les 12 derniers mois</label>
    <type>Checkbox</type>
</CustomField>