force-app/main/default/objects/Account/fields/AglVisiteurCinema3Mois__c.field-meta.xml
<CustomField>
    <fullName>AglVisiteurCinema3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visiteur cinéma sur les 3 derniers mois</label>
    <type>Checkbox</type>
</CustomField>