force-app/main/default/objects/Account/fields/AglVisiteurCinema6Mois__c.field-meta.xml
<CustomField>
    <fullName>AglVisiteurCinema6Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visiteur cinéma sur les 6 derniers mois</label>
    <type>Checkbox</type>
</CustomField>