force-app/main/default/objects/Account/fields/AncienNumeroClient__c.field-meta.xml
<CustomField>
    <fullName>AncienNumeroClient__c</fullName>
    <label>Ancien numéro Client</label>
    <length>50</length>
    <type>Text</type>
</CustomField>