force-app/main/default/objects/Account/fields/Appartement__c.field-meta.xml
<CustomField>
    <fullName>Appartement__c</fullName>
    <label>Appartement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>