force-app/main/default/objects/Account/fields/AscCanalCreationCompteEnLigne__c.field-meta.xml
<CustomField>
    <fullName>AscCanalCreationCompteEnLigne__c</fullName>
    <label>Canal de création du compte UGC en ligne</label>
    <length>40</length>
    <type>Text</type>
</CustomField>