force-app/main/default/objects/Account/fields/AscDateActivationUgcEnLigne__c.field-meta.xml
<CustomField>
    <fullName>AscDateActivationUgcEnLigne__c</fullName>
    <label>Date d&#39;activation du Compte UGC</label>
    <type>DateTime</type>
</CustomField>