force-app/main/default/objects/Account/fields/AscDateAssCarteUgcPlusAscfCare__c.field-meta.xml
<CustomField>
    <fullName>AscDateAssCarteUgcPlusAscfCare__c</fullName>
    <label>Date d&#39;assoc carte UGC+ au self care</label>
    <type>DateTime</type>
</CustomField>