force-app/main/default/objects/Account/fields/AscDateAssCarteUiAscfCare__c.field-meta.xml
<CustomField>
    <fullName>AscDateAssCarteUiAscfCare__c</fullName>
    <label>Date d&#39;association carte UI au self care</label>
    <type>DateTime</type>
</CustomField>