force-app/main/default/objects/Account/fields/AscDateCreationUgcEnLigne__c.field-meta.xml
<CustomField>
    <fullName>AscDateCreationUgcEnLigne__c</fullName>
    <label>Date de création du compte UGC en ligne</label>
    <type>DateTime</type>
</CustomField>