force-app/main/default/objects/Account/fields/AscDateDerLogin__c.field-meta.xml
<CustomField>
    <fullName>AscDateDerLogin__c</fullName>
    <label>Date dernier login compte</label>
    <type>DateTime</type>
</CustomField>