force-app/main/default/objects/Account/fields/AscDateDerModifUgcEnLigne__c.field-meta.xml
<CustomField>
    <fullName>AscDateDerModifUgcEnLigne__c</fullName>
    <label>Date de dernière modif sur UGC en ligne</label>
    <type>DateTime</type>
</CustomField>