force-app/main/default/objects/Account/fields/AscDateDernierLoginApp__c.field-meta.xml
<CustomField>
    <fullName>AscDateDernierLoginApp__c</fullName>
    <label>Date dernier login depuis UGC Direct</label>
    <type>DateTime</type>
</CustomField>