force-app/main/default/objects/Account/fields/AscDateDernierLoginDesktop__c.field-meta.xml
<CustomField>
    <fullName>AscDateDernierLoginDesktop__c</fullName>
    <label>Date dernier login depuis desktop</label>
    <type>DateTime</type>
</CustomField>