force-app/main/default/objects/Account/fields/AscDateDernierLoginMobile__c.field-meta.xml
<CustomField>
    <fullName>AscDateDernierLoginMobile__c</fullName>
    <label>Date dernier login depuis site mobile</label>
    <type>DateTime</type>
</CustomField>