force-app/main/default/objects/Account/fields/AscNbrLoginUgcEnLigne6Mois__c.field-meta.xml
<CustomField>
    <fullName>AscNbrLoginUgcEnLigne6Mois__c</fullName>
    <label>Nombre de login des 6 derniers mois</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>