force-app/main/default/objects/Account/fields/Attachment_Body_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Body_Contrat__c</fullName>
    <label>Attachment Body Contrat</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>