force-app/main/default/objects/Account/fields/Batiment__c.field-meta.xml
<CustomField>
    <fullName>Batiment__c</fullName>
    <label>Bâtiment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>