force-app/main/default/objects/Account/fields/Bloctel__c.field-meta.xml
<CustomField>
    <fullName>Bloctel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le client ne souhaite pas être contacté par téléphone.</description>
    <label>Bloctel</label>
    <type>Checkbox</type>
</CustomField>