force-app/main/default/objects/Account/fields/BoitePostaleBelge__c.field-meta.xml
<CustomField>
    <fullName>BoitePostaleBelge__c</fullName>
    <label>Boîte postale belge</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>