force-app/main/default/objects/Account/fields/Canal_creation_Maj__c.field-meta.xml
<CustomField>
    <fullName>Canal_creation_Maj__c</fullName>
    <description>champ a utiliser pour savoir si envoi vers RCU UGC . Si canal creation =salesforce alors l&#39;account sera envoyé vers le RCU UGC</description>
    <label>Canal création Maj</label>
    <length>20</length>
    <type>Text</type>
</CustomField>