force-app/main/default/objects/Account/fields/ChurnUI__c.field-meta.xml
<CustomField>
    <fullName>ChurnUI__c</fullName>
    <label>Churn UI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>