force-app/main/default/objects/Account/fields/CliCinemaPrefere1__c.field-meta.xml
<CustomField>
    <fullName>CliCinemaPrefere1__c</fullName>
    <label>Cinéma préféré n° 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>