force-app/main/default/objects/Account/fields/CliClientEndormi__c.field-meta.xml
<CustomField>
    <fullName>CliClientEndormi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Endormi</label>
    <type>Checkbox</type>
</CustomField>