force-app/main/default/objects/Account/fields/CliComplexeDepartPlusFrequente6Mois__c.field-meta.xml
<CustomField>
    <fullName>CliComplexeDepartPlusFrequente6Mois__c</fullName>
    <label>CliComplexeDepartPlusFrequente6Mois</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>