force-app/main/default/objects/Account/fields/CliComplexeDernierFrequente__c.field-meta.xml
<CustomField>
    <fullName>CliComplexeDernierFrequente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dernier Complexe Fréquenté</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Accounts (Dernier Complexe Fréquenté)</relationshipLabel>
    <relationshipName>DernierComplexeFrequente</relationshipName>
    <type>Lookup</type>
</CustomField>