force-app/main/default/objects/Account/fields/CliComplexeJourSemPlusFrequente6Mois__c.field-meta.xml
<CustomField>
    <fullName>CliComplexeJourSemPlusFrequente6Mois__c</fullName>
    <label>CliComplexeJourSemPlusFrequente6Mois</label>
    <length>8</length>
    <type>Text</type>
</CustomField>