force-app/main/default/objects/Account/fields/CliComplexePlusFrequent6mois__c.field-meta.xml
<CustomField>
    <fullName>CliComplexePlusFrequent6mois__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complexe le + Fréquenté depuis 6 mois</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>ComplexePlusFrequente6Mois</relationshipName>
    <type>Lookup</type>
</CustomField>