force-app/main/default/objects/Account/fields/CliComplexePrefere1__c.field-meta.xml
<CustomField>
    <fullName>CliComplexePrefere1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complexe Préféré n° 1</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Accounts (Complexe Préféré n° 1)</relationshipLabel>
    <relationshipName>ComplexePrefere1</relationshipName>
    <type>Lookup</type>
</CustomField>