force-app/main/default/objects/Account/fields/CliComplexePrefere2__c.field-meta.xml
<CustomField>
    <fullName>CliComplexePrefere2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complexe Préféré n° 2</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Accounts (Complexe Préféré n° 2)</relationshipLabel>
    <relationshipName>ComplexePrefere2</relationshipName>
    <type>Lookup</type>
</CustomField>