force-app/main/default/objects/Account/fields/CliComplexePrefere3__c.field-meta.xml
<CustomField>
    <fullName>CliComplexePrefere3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complexe Préféré n° 3</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Accounts (Complexe Préféré n° 3)</relationshipLabel>
    <relationshipName>ComplexePrefere3</relationshipName>
    <type>Lookup</type>
</CustomField>