force-app/main/default/objects/Account/fields/CliEmailComplementaire__c.field-meta.xml
<CustomField>
    <fullName>CliEmailComplementaire__c</fullName>
    <label>Email Complémentaire</label>
    <type>Email</type>
</CustomField>