force-app/main/default/objects/Account/fields/ClientResident__c.field-meta.xml
<CustomField>
    <fullName>ClientResident__c</fullName>
    <description>Champ permettant d&#39;identifier un client habitant en France ou Belgique. 
utilisé pour alimenter le champ Code Pays.</description>
    <label>Client résident en</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
                <default>true</default>
                <label>France</label>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>