force-app/main/default/objects/Account/fields/CliNbrInteractions3MoisNonUI__c.field-meta.xml
<CustomField>
    <fullName>CliNbrInteractions3MoisNonUI__c</fullName>
    <inlineHelpText>Nombre d&#39;interactions service client &amp; self care sur les 3 derniers mois pour les non UI</inlineHelpText>
    <label>Nb d&#39;interactions SC &amp; self care 3 mois</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>