force-app/main/default/objects/Account/fields/CliNbrReclamations6MoisNonUI__c.field-meta.xml
<CustomField>
    <fullName>CliNbrReclamations6MoisNonUI__c</fullName>
    <label>Nb réclamations 6 derniers mois non UI</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>