force-app/main/default/objects/Account/fields/CliStatutRCU__c.field-meta.xml
<CustomField>
    <fullName>CliStatutRCU__c</fullName>
    <label>Statut du client ds référentiel client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sans email</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Supprimé</fullName>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
            <value>
                <fullName>Anonyme</fullName>
            </value>
            <value>
                <fullName>Endormi</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>En attente infinie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>