force-app/main/default/objects/Account/fields/CodePays__c.field-meta.xml
<CustomField>
    <fullName>CodePays__c</fullName>
    <label>Code Pays</label>
    <length>3</length>
    <type>Text</type>
</CustomField>