force-app/main/default/objects/Account/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <inlineHelpText>Le code postal est rempli automatiquement grâce à la sélection de la ville.</inlineHelpText>
    <label>Code Postal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>