force-app/main/default/objects/Account/fields/Completude__c.field-meta.xml
<CustomField>
    <fullName>Completude__c</fullName>
    <formula>IMAGE(&quot;/resource/1509639497000/Iconenewsletter&quot;,&quot;.jpg&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complétude</label>
    <type>Text</type>
</CustomField>