force-app/main/default/objects/Account/fields/DateCreationRCU__c.field-meta.xml
<CustomField>
    <fullName>DateCreationRCU__c</fullName>
    <label>Date création RCU</label>
    <type>DateTime</type>
</CustomField>