force-app/main/default/objects/Account/fields/DateDernierAchatFormules5Places__c.field-meta.xml
<CustomField>
    <fullName>DateDernierAchatFormules5Places__c</fullName>
    <label>Date dernier achat formules 5 places</label>
    <type>Date</type>
</CustomField>