force-app/main/default/objects/Account/fields/DateDerniereMajRCU__c.field-meta.xml
<CustomField>
    <fullName>DateDerniereMajRCU__c</fullName>
    <label>Date dernière mise à jour RCU</label>
    <type>DateTime</type>
</CustomField>