force-app/main/default/objects/Account/fields/DateDernierParrainageFideliteUI__c.field-meta.xml
<CustomField>
    <fullName>DateDernierParrainageFideliteUI__c</fullName>
    <label>Date dernier parrainage Fidélité / UI</label>
    <type>Date</type>
</CustomField>