force-app/main/default/objects/Account/fields/DateFinContratUI__c.field-meta.xml
<CustomField>
    <fullName>DateFinContratUI__c</fullName>
    <label>Date de fin du contrat UI</label>
    <type>Date</type>
</CustomField>