force-app/main/default/objects/Account/fields/DateNaissanceEnfant1__c.field-meta.xml
<CustomField>
    <fullName>DateNaissanceEnfant1__c</fullName>
    <label>Date de naissance enfant 1</label>
    <type>Date</type>
</CustomField>