force-app/main/default/objects/Account/fields/DateNaissanceEnfant2__c.field-meta.xml
<CustomField>
    <fullName>DateNaissanceEnfant2__c</fullName>
    <label>Date de naissance enfant 2</label>
    <type>Date</type>
</CustomField>