force-app/main/default/objects/Account/fields/DateNaissanceEnfant3__c.field-meta.xml
<CustomField>
    <fullName>DateNaissanceEnfant3__c</fullName>
    <label>Date de naissance enfant 3</label>
    <type>Date</type>
</CustomField>