force-app/main/default/objects/Account/fields/DateSouscription__c.field-meta.xml
<CustomField>
    <fullName>DateSouscription__c</fullName>
    <label>Date souscription du dernier contrat UI</label>
    <type>Date</type>
</CustomField>