force-app/main/default/objects/Account/fields/DetteNonEchue__c.field-meta.xml
<CustomField>
    <fullName>DetteNonEchue__c</fullName>
    <label>Dette non échue</label>
    <summarizedField>Dette__c.Montant__c</summarizedField>
    <summaryFilterItems>
        <field>Dette__c.Type__c</field>
        <operation>equals</operation>
        <value>Dette non échue</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Dette__c.Statut__c</field>
        <operation>equals</operation>
        <value>En cours</value>
    </summaryFilterItems>
    <summaryForeignKey>Dette__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>