force-app/main/default/objects/Account/fields/Doublon_potentiel__c.field-meta.xml
<CustomField>
    <fullName>Doublon_potentiel__c</fullName>
    <label>Doublon potentiel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>