force-app/main/default/objects/Account/fields/Eligibilite_Reabo__c.field-meta.xml
<CustomField>
    <fullName>Eligibilite_Reabo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag d&#39;éligibilité de réabonnement du client</description>
    <label>Eligibilité Réabonnement</label>
    <type>Checkbox</type>
</CustomField>