force-app/main/default/objects/Account/fields/emailpayeur__c.field-meta.xml
<CustomField>
    <fullName>emailpayeur__c</fullName>
    <formula>Payeur__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email payeur</label>
    <type>Text</type>
</CustomField>