force-app/main/default/objects/Account/fields/Entit__c.field-meta.xml
<CustomField>
    <fullName>Entit__c</fullName>
    <label>Entité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>