force-app/main/default/objects/Account/fields/Escalier__c.field-meta.xml
<CustomField>
    <fullName>Escalier__c</fullName>
    <label>Escalier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>