force-app/main/default/objects/Account/fields/Etage__c.field-meta.xml
<CustomField>
    <fullName>Etage__c</fullName>
    <label>Etage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>