force-app/main/default/objects/Account/fields/EvolutionScoreAntichurnMoisPrec__c.field-meta.xml
<CustomField>
    <fullName>EvolutionScoreAntichurnMoisPrec__c</fullName>
    <label>Evol du score antichurn / mois précédent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>