force-app/main/default/objects/Account/fields/Extention_URL__c.field-meta.xml
<CustomField>
    <fullName>Extention_URL__c</fullName>
    <formula>IF( ISPICKVAL( ProduitUGC__c , &quot;français&quot;) , &quot;fr&quot;, &quot;be&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extention URL</label>
    <type>Text</type>
</CustomField>