force-app/main/default/objects/Account/fields/Extention_URL_Pays__c.field-meta.xml
<CustomField>
    <fullName>Extention_URL_Pays__c</fullName>
    <formula>IF( ISPICKVAL(ProduitUGC__c, &quot;français&quot;), &quot;fr&quot;, &quot;be&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extention URL Pays</label>
    <type>Text</type>
</CustomField>