force-app/main/default/objects/Account/fields/FidCinemaTopBurn12Mois__c.field-meta.xml
<CustomField>
    <fullName>FidCinemaTopBurn12Mois__c</fullName>
    <label>Cinéma enreg le + trans burn 12 DM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>