force-app/main/default/objects/Account/fields/FidCinemaTopEarn12Mois__c.field-meta.xml
<CustomField>
    <fullName>FidCinemaTopEarn12Mois__c</fullName>
    <label>Cinéma enreg le + trans earn 12 DM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>