force-app/main/default/objects/Account/fields/FidCumulPointsEarnes__c.field-meta.xml
<CustomField>
    <fullName>FidCumulPointsEarnes__c</fullName>
    <label>Cumul pts earnés depuis entrée en base</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>