force-app/main/default/objects/Account/fields/FidCumulPtsTransfoDepuisEntree__c.field-meta.xml
<CustomField>
    <fullName>FidCumulPtsTransfoDepuisEntree__c</fullName>
    <label>Cumul pts transf depuis entrée en base</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>