force-app/main/default/objects/Account/fields/FidDate1ereTransfoPoints__c.field-meta.xml
<CustomField>
    <fullName>FidDate1ereTransfoPoints__c</fullName>
    <label>Date de la première transfo de points</label>
    <type>DateTime</type>
</CustomField>