force-app/main/default/objects/Account/fields/FidDateDernActivUGCPlus__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernActivUGCPlus__c</fullName>
    <label>Date dernière activation fidélité UGC+</label>
    <type>DateTime</type>
</CustomField>