force-app/main/default/objects/Account/fields/FidDateDernActivUIPlus__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernActivUIPlus__c</fullName>
    <label>Date dernière activation Fidélité UI+</label>
    <type>DateTime</type>
</CustomField>