force-app/main/default/objects/Account/fields/FidDateDernBurnBilleterie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernBurnBilleterie__c</fullName>
    <label>Date du dernier burn billetterie</label>
    <type>DateTime</type>
</CustomField>