force-app/main/default/objects/Account/fields/FidDateDernBurnConfiserie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernBurnConfiserie__c</fullName>
    <label>Date du dernier burn confiserie</label>
    <type>DateTime</type>
</CustomField>