force-app/main/default/objects/Account/fields/FidDateDernDesactivUGCPlus__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernDesactivUGCPlus__c</fullName>
    <label>Date dernière désact Fidélité UGC+</label>
    <type>DateTime</type>
</CustomField>