force-app/main/default/objects/Account/fields/FidDateDernDesactivUIPlus__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernDesactivUIPlus__c</fullName>
    <label>Date dernière désactivation Fidélité UI+</label>
    <type>DateTime</type>
</CustomField>