force-app/main/default/objects/Account/fields/FidDateDernEarnBilleterie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernEarnBilleterie__c</fullName>
    <label>Date dern earn billet dern carte active</label>
    <type>DateTime</type>
</CustomField>