force-app/main/default/objects/Account/fields/FidDateDernEarnConfiserie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernEarnConfiserie__c</fullName>
    <label>Date dern earn confi dern carte active</label>
    <type>DateTime</type>
</CustomField>