force-app/main/default/objects/Account/fields/FidDateDernEarnNonTransac__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernEarnNonTransac__c</fullName>
    <label>Date du dernier earn non transactionnel</label>
    <type>DateTime</type>
</CustomField>