force-app/main/default/objects/Account/fields/FidDateDerniereTransfoPoints__c.field-meta.xml
<CustomField>
    <fullName>FidDateDerniereTransfoPoints__c</fullName>
    <label>Date de la dernière transfo de points</label>
    <type>DateTime</type>
</CustomField>