force-app/main/default/objects/Account/fields/FidDateDernTransfoPtsAutreCadeau__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernTransfoPtsAutreCadeau__c</fullName>
    <label>Date de dern transf des pts en autre cad</label>
    <type>DateTime</type>
</CustomField>