force-app/main/default/objects/Account/fields/FidDateDernTransfoPtsBilleterie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernTransfoPtsBilleterie__c</fullName>
    <label>Date de dern transfo des pts en billet</label>
    <type>DateTime</type>
</CustomField>