force-app/main/default/objects/Account/fields/FidDateDernTransfoPtsConfiserie__c.field-meta.xml
<CustomField>
    <fullName>FidDateDernTransfoPtsConfiserie__c</fullName>
    <label>Date de dern transfo des pts en confis</label>
    <type>DateTime</type>
</CustomField>