force-app/main/default/objects/Account/fields/FidDateInscriptionFilleulUI__c.field-meta.xml
<CustomField>
    <fullName>FidDateInscriptionFilleulUI__c</fullName>
    <label>Date d&#39;inscription du filleul UI</label>
    <type>DateTime</type>
</CustomField>