force-app/main/default/objects/Account/fields/FidDatePerempPrimesBilleterie__c.field-meta.xml
<CustomField>
    <fullName>FidDatePerempPrimesBilleterie__c</fullName>
    <label>Date de péremp des primes billetterie</label>
    <type>DateTime</type>
</CustomField>