force-app/main/default/objects/Account/fields/FidDatePerempPrimesConfiserie__c.field-meta.xml
<CustomField>
    <fullName>FidDatePerempPrimesConfiserie__c</fullName>
    <label>Date de péremption des primes confiserie</label>
    <type>DateTime</type>
</CustomField>