force-app/main/default/objects/Account/fields/FidDatePeremptionPoints__c.field-meta.xml
<CustomField>
    <fullName>FidDatePeremptionPoints__c</fullName>
    <label>Date de péremption des points</label>
    <type>Date</type>
</CustomField>