force-app/main/default/objects/Account/fields/FidDatePeremptionPrimes__c.field-meta.xml
<CustomField>
    <fullName>FidDatePeremptionPrimes__c</fullName>
    <label>Date de péremption des primes</label>
    <type>Date</type>
</CustomField>