force-app/main/default/objects/Account/fields/FidDatePremEarnBilleterie__c.field-meta.xml
<CustomField>
    <fullName>FidDatePremEarnBilleterie__c</fullName>
    <label>Date 1er earn billet dern carte active</label>
    <type>DateTime</type>
</CustomField>