force-app/main/default/objects/Account/fields/FidDatePremEarnConfiserie__c.field-meta.xml
<CustomField>
    <fullName>FidDatePremEarnConfiserie__c</fullName>
    <label>Date 1er earn conf dernière carte active</label>
    <type>DateTime</type>
</CustomField>