force-app/main/default/objects/Account/fields/FidDatePremEarnNonTransac__c.field-meta.xml
<CustomField>
    <fullName>FidDatePremEarnNonTransac__c</fullName>
    <label>Date 1er earn non trans</label>
    <type>DateTime</type>
</CustomField>