force-app/main/default/objects/Account/fields/FidNbrChargPrimesBilletterieTotal__c.field-meta.xml
<CustomField>
    <fullName>FidNbrChargPrimesBilletterieTotal__c</fullName>
    <label>Nbr de charg primes bill total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>