force-app/main/default/objects/Account/fields/FidNbrChargPrimesConfiserieTotal__c.field-meta.xml
<CustomField>
    <fullName>FidNbrChargPrimesConfiserieTotal__c</fullName>
    <label>Nbr de charg primes confiserie total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>